force-app/main/default/objects/Event__c/fields/Event_Organiser__c.field-meta.xml
<CustomField>
    <fullName>Event_Organiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organiser</label>
    <referenceTo>Event_Organiser__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>