force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>