force-app/main/default/objects/Event__c/fields/People_Attending__c.field-meta.xml
<CustomField>
    <fullName>People_Attending__c</fullName>
    <label>People Attending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>