force-app/main/default/objects/Event__c/validationRules/End_date_atleast_one_day_ahead_SD.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_atleast_one_day_ahead_SD</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!(ISNULL(  End_Date_Time__c   )),DATEVALUE(   End_Date_Time__c  )-DATEVALUE(  Start__c  ) &lt;0)</errorConditionFormula>
    <errorMessage>EndDate/Time_must_be at least _1_day_ahead the start date.</errorMessage>
</ValidationRule>