force-app/main/default/objects/Event__c/validationRules/Event_type_is_Inperson_Location_must.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_type_is_Inperson_Location_must</fullName>
    <active>true</active>
    <description>If event type is in person then user must select Location .</description>
    <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;In-Person&apos;), ISBLANK( Location__c ))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Location must be selected.</errorMessage>
</ValidationRule>