force-app/main/default/objects/Event__c/validationRules/Event_type_is_virtual_Location_not_must.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_type_is_virtual_Location_not_must</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Event_Type__c , &apos;Virtual&apos;) , (!ISBLANK( Location__r.Name)),False)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>If the event type is virtual then location no required.</errorMessage>
</ValidationRule>