force-app/main/default/objects/Event__c/validationRules/Recurring_on_Check_is_Unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_on_Check_is_Unchecked</fullName>
    <active>true</active>
    <description>if recurring is unchecked then frequency field is not selected.</description>
    <errorConditionFormula>AND( Recurring__c =FALSE, NOT( ISPICKVAL( Frequency__c , &quot;NULL&quot;) ) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>frequency is not selected</errorMessage>
</ValidationRule>