force-app/main/default/objects/Event__c/validationRules/Recurring_on_Check_is_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_on_Check_is_Yes</fullName>
    <active>true</active>
    <description>If Recurring box is checked then frequency field be filled.</description>
    <errorConditionFormula>AND( Recurring__c , ISBLANK( TEXT( Frequency__c )) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>Provide the frequency field</errorMessage>
</ValidationRule>